Initial commit: Setup project structure and core logic

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="https://i.imgur.com/Q8gO7P2.png" alt="PaperGo Logo" class="logo">
+            <img src="/static/logo.png" alt="PaperGo Logo" class="logo">
             <h1>Trạm Tái Chế Thông Minh PaperGo</h1>
         </header>
         <main>
